# trading-service/docs/swagger.yaml
@@ -44,6 +44,28 @@ definitions:
     - asset_type
     - price
     type: object
+  dto.SetGlobalLimitsRequest:
+    properties:
+      daily_buy_limit:
+        type: number
+      daily_sell_limit:
+        type: number
+      max_buy:
+        type: number
+      max_sell:
+        type: number
+      min_buy:
+        type: number
+      min_sell:
+        type: number
+    required:
+    - daily_buy_limit
+    - daily_sell_limit
+    - max_buy
+    - max_sell
+    - min_buy
+    - min_sell
+    type: object
   entity.AssetType:
     enum:
     - gold
@@ -125,6 +147,39 @@ definitions:
 info:
   contact: {}
 paths:
+  /admin/ignore-inventory-limit:
+    patch:
+      consumes:
+      - application/json
+      description: Updates the ignore inventory limit status for the trading service.
+      parameters:
+      - description: new status of the flag
+        in: query
+        name: ignore
+        required: true
+        type: boolean
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ignore inventory limit updated successfully
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/api.Error'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/api.Error'
+      security:
+      - BearerAuth: []
+      summary: Update inventory limit ignore status
+      tags:
+      - Admin Inventory
   /admin/inventory:
     get:
       consumes:
@@ -233,6 +288,85 @@ paths:
       summary: Delete an inventory
       tags:
       - Admin Inventory
+  /admin/inventory/{assetType}/limits:
+    get:
+      consumes:
+      - application/json
+      description: Retrieves the global trade limits for a specified asset type.
+      parameters:
+      - description: Asset type
+        in: path
+        name: assetType
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Trade limits for the asset type
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Invalid asset type
+          schema:
+            $ref: '#/definitions/api.Error'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/api.Error'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/api.Error'
+      security:
+      - BearerAuth: []
+      summary: Get global trade limits
+      tags:
+      - Admin Inventory
+  /admin/trades/inventory/{assetType}/limits:
+    post:
+      consumes:
+      - application/json
+      description: Updates the global trade limits for buying and selling assets.
+      parameters:
+      - description: Set global trade limits request
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/dto.SetGlobalLimitsRequest'
+      - description: Asset type to delete from inventory
+        in: path
+        name: assetType
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Message indicating global trade limits were updated successfully
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Invalid input
+          schema:
+            $ref: '#/definitions/api.Error'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/api.Error'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/api.Error'
+      security:
+      - BearerAuth: []
+      summary: Set global trade limits
+      tags:
+      - Admin Inventory
   /admin/transactions:
     get:
       consumes:
@@ -313,6 +447,81 @@ paths:
       security:
       - BearerAuth: []
       summary: Get transactions for a specific user
+      tags:
+      - Admin Transactions
+  /admin/transactions/summary/single-day:
+    get:
+      description: Retrieves a summary of transactions for a specific asset type on
+        a given date.
+      parameters:
+      - description: Date in YYYY-MM-DD format
+        in: query
+        name: date
+        required: true
+        type: string
+      - description: Asset type
+        in: query
+        name: assetType
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Summary of transactions for the day
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Invalid date format or missing parameters
+          schema:
+            $ref: '#/definitions/api.Error'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/api.Error'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/api.Error'
+      security:
+      - BearerAuth: []
+      summary: Get single day transaction summary
+      tags:
+      - Admin Transactions
+  /admin/transactions/summary/total:
+    get:
+      description: Retrieves the total summary of all transactions for a specific
+        asset type.
+      parameters:
+      - description: Asset type
+        in: query
+        name: assetType
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Total summary of transactions
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Invalid asset type or missing parameters
+          schema:
+            $ref: '#/definitions/api.Error'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/api.Error'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/api.Error'
+      security:
+      - BearerAuth: []
+      summary: Get total transaction summary
       tags:
       - Admin Transactions
   /trades/buy:
